# bubop

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  coverage.yml  greetings.yml  install.yml  lint_and_test.yml  publish.yml  unittest.yml
bubop/: __init__.py  classes.py  cli.py  common_dir.py  crypto.py  exceptions.py  fs.py  inspect.py  logging.py  misc.py  prefs_manager.py  serial.py  string.py  time.py  version.py
hooks/: pre-commit
rst/: conf.py  index.rst
rst/api/: bubop.rst  modules.rst
scripts/: check_style.py
tests/: conftest.py  test_common_dir.py  test_logging.py  test_prefs_manager.py  test_serial.py  test_string.py  test_utils.py
