[tool.poetry]
name = "bubop"
version = "0.1.1"
description = "Bergercookie's Useful Bits Of Python"
authors = ["Nikos Koukis <nickkouk@gmail.com>"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/bergercookie/bubop"
repository = "https://github.com/bergercookie/bubop"
classifiers = [
  "Programming Language :: Python :: 3.8",
  "License :: Other/Proprietary License",
  "Operating System :: Unix",
]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.3"
tqdm = "^4.62.3"
isort = "^5.10.1"
python-dateutil = "^2.8.2"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "*"
black = { version = "21.11b1", allow-prereleases = true }
mock = "*"
pdbpp = "^0.10.3"
mypy = "*"
pyright = "*"
pyfakefs = "^4.5.3"
pre-commit = "^2.16.0"
identify = "^2.4.0"
types-PyYAML = "^6.0.1"
types-python-dateutil = "^2.8.3"

[tool.isort]
include_trailing_comma = true
line_length = 95
multi_line_output = 3
profile = "black"

[tool.black]
experimental-string-processing = true
line-length = 95
target-version = ['py38', 'py39']
include = '\.pyi?$'

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["tqdm", "pytest", "pexpect"]
ignore_missing_imports = true


[tool.pylint]
[tool.pylint.'MESSAGES CONTROL']
max-line-length = 95
ignore-invalid-name = true

[tool.pyright]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.8"
pythonPlatform = "Linux"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
